# fecfile-validate

./: .flake8  .gitignore  .safety.dependency.ignore  BUSINESS_LABOR_NON_CONTRIBUTION_ACCOUNT.html  BUSINESS_LABOR_NON_CONTRIBUTION_ACCOUNT_spec.html  C1_LOAN_AGREEMENT.html  C1_LOAN_AGREEMENT_spec.html  C2_LOAN_GUARANTOR.html  C2_LOAN_GUARANTOR_spec.html  CANDIDATE_CONTRIBUTIONS.html  CANDIDATE_CONTRIBUTIONS_spec.html  COM_IN_KIND_OUTS.html  COM_IN_KIND_RECEIPTS.html  COM_IN_KIND_RECEIPTS_spec.html  CONDUIT_EARMARKS.html  CONDUIT_EARMARKS_spec.html  CONDUIT_EARMARK_OUTS.html  CONDUIT_EARMARK_OUTS_spec.html  COORDINATED_PARTY_EXPENDITURES.html  Contact_Candidate.html  Contact_Candidate_spec.html  Contact_Committee.html  Contact_Committee_spec.html  Contact_Individual.html  Contact_Organization.html  DEBTS.html  DEBTS_spec.html  DISBURSEMENTS.html  DISBURSEMENTS_FEA.html  DISBURSEMENTS_spec.html  DISBURSEMENT_MEMOS.html  DISBURSEMENT_MEMOS_FEA.html  DISBURSEMENT_MEMOS_FEA_spec.html  DISBURSEMENT_MEMOS_spec.html  DISBURSEMENT_PARENTS.html  DISBURSEMENT_PARENTS_FEA.html  DISBURSEMENT_PARENTS_FEA_spec.html  DISBURSEMENT_PARENTS_STAFF.html  DISBURSEMENT_PARENTS_spec.html  Dockerfile  (+212 more)
fecfile_validate_python/: LICENSE  README.md  setup.cfg  setup.py
fecfile_validate_python/src/: __init__.py  form3x.py
fecfile_validate_python/tests/: sample_F3X.json  sample_INDV_REC.json  sample_IND_contact.json  sample_contact_IND.json  sample_independent_expenditure.json  sample_individual_receipt.json  test_F3X.py  test_contact_schema.py  test_ie.py  test_schema.json  test_validate.py
(+1906 files in other folders)
