[metadata]
name = fecfile-validate
version = 0.0.1
description = A package to validate FECFile Online submissions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fecgov/fecfile-validate
project_urls =
    Bug Tracker = https://github.com/fecgov/fecfile-validate/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src